# CameraFeaturesLib

./: .gitignore  .gitmodules  CMakeLists.txt  dockerfile
sample/: Main.cpp
src/: LongExposure.cpp  LongExposure.h  MotionInterpolator.cpp  MotionInterpolator.h  SlowMotion.cpp  SlowMotion.h  VideoInput.cpp  VideoInput.h  VideoManager.h  VideoOutput.cpp  VideoOutput.h  def_utils.h
